# hyper-email-leak

./: README.md  pyproject.toml  setup.py
.pytest_cache/v/cache/: nodeids
hyper_email_leak/: __init__.py  core.py
tests/: test_hyper_email_leak.py
